Fixed Modal z-index

--- a/site/src/ui/Modal/styles.module.css
+++ b/site/src/ui/Modal/styles.module.css
@@ -1,14 +1,12 @@
 .container {
+    z-index: 2;
+
     position: fixed;
     top: 0;
     left: 0;
 
     width: 100%;
     height: 100%
-}
-
-.container > * {
-    z-index: 5
 }
 
 .modal {
